# 42ngine-archive

./: .gitignore  42ngine.h  CMakeLists.txt  Doxyfile  main.cpp
cmake/modules/: Find42ngine.cmake
demos/: CMakeLists.txt  Sandbox.cpp
docs/html/: ._index.html  42ngine_8h_source.html  _application_8h_source.html  _index_buffer_8h_source.html  _renderer_8h_source.html  _shader_8h_source.html  _vertex_array_8h_source.html  _vertex_buffer_8h_source.html  _window_8h_source.html  annotated.html  classes.html  classftn_1_1_application-members.html  classftn_1_1_application.html  classftn_1_1_index_buffer-members.html  classftn_1_1_index_buffer.html  classftn_1_1_renderer-members.html  classftn_1_1_renderer.html  classftn_1_1_shader-members.html  classftn_1_1_shader.html  classftn_1_1_vertex_array-members.html  classftn_1_1_vertex_array.html  classftn_1_1_vertex_buffer-members.html  classftn_1_1_vertex_buffer.html  classftn_1_1_window-members.html  classftn_1_1_window.html  cmake-build-debug_2cotire_242ngine___c_x_x__prefix_8hxx_source.html  cmake-build-release_2cotire_242ngine___c_x_x__prefix_8hxx_source.html  dir_2857e0e3e730d863ac3f3500c7ce3b97.html  dir_3f6157423b1e24fbbe29232d89e92d45.html  dir_452bd50404506a625d95079c595f0138.html  dir_5aaf84b703d281fdd4f9df4eeb2cd054.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68b88ea895c784a4acfc8785566edbab.html  dir_d1f917784ef6b0bbb8c31ec803eebb7b.html  dir_fa7c40bfa3c7d26a2dd43c78ce573595.html  files.html  functions.html  functions_func.html  structftn_1_1_vertex-members.html  structftn_1_1_vertex.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  searchdata.js
docs/latex/: annotated.tex  classftn_1_1_application.tex  classftn_1_1_index_buffer.tex  classftn_1_1_renderer.tex  classftn_1_1_shader.tex  classftn_1_1_vertex_array.tex  classftn_1_1_vertex_buffer.tex  classftn_1_1_window.tex  refman.tex  structftn_1_1_vertex.tex
include/: 42ngine.h
libs/CppLogger/: CMakeLists.txt  LICENSE  README.md
libs/CppLogger/cmake/: CppLoggerConfig.cmake.in
libs/CppLogger/src/: Log.cpp  Log.h
libs/CppLogger/test/: basicTest.cpp
libs/imgui/: CMakeLists.txt
src/: 42ngine.h  Application.cpp  Application.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Element.cpp  Element.h  ElementFeatures.cpp  ElementFeatures.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/Core/: Application.cpp  Application.h  EntryPoint.h
src/newBuffers/: VertexArray.cpp  VertexArray.h
